@@ -8,4 +8,4 @@ jdbc.url=jdbc:sqlite::memory:
 jdbc.username=pc
 jdbc.password=pc
 #jdbc.schemaPath=classpath:db.sqlite
-jdbc.schemaPath=classpath:db.new-sqlite, db.insert, db.predefined
+jdbc.schemaPath=classpath:db.sqlite, db.insert, db.predefined
